--- a/boards/arm/nrf52_blenano2/nrf52_blenano2.dts
+++ b/boards/arm/nrf52_blenano2/nrf52_blenano2.dts
@@ -72,19 +72,15 @@
 
 		boot_partition: partition@0 {
 			label = "mcuboot";
-			reg = <0x00000000 0x8000>;
+			reg = <0x00000000 0xc000>;
 		};
-		slot0_partition: partition@8000 {
+		slot0_partition: partition@c000 {
 			label = "image-0";
-			reg = <0x00008000 0x34000>;
+			reg = <0x0000c000 0x37000>;
 		};
-		slot1_partition: partition@3c000 {
+		slot1_partition: partition@43000 {
 			label = "image-1";
-			reg = <0x0003c000 0x34000>;
-		};
-		scratch_partition: partition@70000 {
-			label = "image-scratch";
-			reg = <0x00070000 0xa000>;
+			reg = <0x00043000 0x37000>;
 		};
 
 		/*
