--- a/boards/arm/nrf5340dk_nrf5340/nrf5340pdk_nrf5340_cpunet.dts
+++ b/boards/arm/nrf5340dk_nrf5340/nrf5340pdk_nrf5340_cpunet.dts
@@ -124,19 +124,15 @@
 		};
 		slot0_partition: partition@c000 {
 			label = "image-0";
-			reg = <0x0000C000 0x12000>;
+			reg = <0x0000c000 0x37000>;
 		};
-		slot1_partition: partition@1e000 {
+		slot1_partition: partition@43000 {
 			label = "image-1";
-			reg = <0x0001E000 0x12000>;
+			reg = <0x00043000 0x37000>;
 		};
-		scratch_partition: partition@30000 {
-			label = "image-scratch";
-			reg = <0x00030000 0xa000>;
-		};
-		storage_partition: partition@3a000 {
+		storage_partition: partition@7a000 {
 			label = "storage";
-			reg = <0x0003a000 0x6000>;
+			reg = <0x0007a000 0x00006000>;
 		};
 	};
 };
