--- a/subsys/logging/Kconfig
+++ b/subsys/logging/Kconfig
@@ -211,6 +211,7 @@ config LOG_PROCESS_THREAD_STACK_SIZE
 	default 1024 if XTENSA
 	default 4096 if (X86 && X86_64)
 	default 4096 if ARM64
+	default 1024 if LOG_BACKEND_FS
 	default 768
 	help
 	  Set the internal stack size for log processing thread.
@@ -278,6 +279,57 @@ config LOG_FRONTEND
 	help
 	  When enabled, logs are redirected to a custom frontend instead
 	  of being processed by the logger.
+
+config LOG_BACKEND_FS
+	bool "Enable LittleFS backend"
+	depends on FILE_SYSTEM_LITTLEFS
+	help
+	  When enabled backend is using LittleFS to output logs.
+
+if LOG_BACKEND_FS
+
+config LOG_BACKEND_FS_AUTOSTART
+	bool "Enable file system backend start automatically"
+	default y
+	help
+	  Allow backend to start automatically. Initialize it's own
+	  LittleFS instance and mount it.
+
+config LOG_BACKEND_FS_OVERWRITE
+	bool "Enable old log files overwrite"
+	default y
+	help
+	  When enabled backend overwrites oldest log files.
+	  In other case, when memory is full, new messages are dropped.
+
+config LOG_BACKEND_FS_FILE_PREFIX
+	string "Log file name prefix"
+	default "log."
+	help
+	  User defined name of log files saved in the file system.
+	  The prefix is followed by the number of log file.
+
+config LOG_BACKEND_FS_MOUNT_POINT
+	string "File system mount point directory"
+	default "/lfs"
+	help
+	  User defined file system mount point directory.
+
+config LOG_BACKEND_FS_FILE_SIZE
+	int "User defined log file size"
+	default 4096
+	range 128 16384
+	help
+	  Max log file size (in bytes).
+
+config LOG_BACKEND_FS_FILES_LIMIT
+	int "Max number of files containing logs"
+	default 10
+	help
+	  Limit of number of files with logs. It is also limited by
+	  size of file system partition.
+
+endif # LOG_BACKEND_FS
 
 config LOG_BACKEND_UART
 	bool "Enable UART backend"
