--- a/samples/subsys/mgmt/mcumgr/smp_svr/prj.conf
+++ b/samples/subsys/mgmt/mcumgr/smp_svr/prj.conf
@@ -21,6 +21,15 @@ CONFIG_STATS_NAMES=y
 CONFIG_MCUMGR_CMD_IMG_MGMT=y
 CONFIG_MCUMGR_CMD_OS_MGMT=y
 CONFIG_MCUMGR_CMD_STAT_MGMT=y
+CONFIG_MCUMGR_CMD_FS_MGMT=y
 
 # Enable logging
 CONFIG_LOG=y
+
+# Enable littlefs for fs backend.
+CONFIG_FLASH_MAP=y
+CONFIG_FILE_SYSTEM=y
+CONFIG_FILE_SYSTEM_LITTLEFS=y
+
+# Enable logger file system backend.
+CONFIG_LOG_BACKEND_FS=y
