modules: introduce MCUBOOT_BOOTUTIL module
Some parts of subsys/dfu/boot code are re-implementations of
what is implemented in the MCUBoot repository.

Mcuboot's repository already provide implementation of function
required for application for interact with the MCUboot.

This patch introduces new MCUBOOT_BOOTUTIL module which covers
common code which is used in the bootloader and the chainnloaded
application.

Signed-off-by: Andrzej Puzdrowski <andrzej.puzdrowski@nordicsemi.no>

--- a/subsys/dfu/boot/CMakeLists.txt
+++ b/subsys/dfu/boot/CMakeLists.txt
@@ -1,4 +1,9 @@
 # SPDX-License-Identifier: Apache-2.0
 
-zephyr_sources_ifdef(CONFIG_MCUBOOT_IMG_MANAGER mcuboot.c)
+if(CONFIG_MCUBOOT_IMG_MANAGER)
+zephyr_library()
+zephyr_library_sources(mcuboot.c)
+zephyr_library_link_libraries(MCUBOOT_BOOTUTIL)
+endif()
+
 zephyr_sources_ifdef(CONFIG_MCUBOOT_SHELL mcuboot_shell.c)
