--- a/modules/Kconfig
+++ b/modules/Kconfig
@@ -30,3 +30,4 @@ source "modules/Kconfig.tinycbor"
 source "modules/Kconfig.tinycrypt"
 source "modules/Kconfig.vega"
 source "modules/Kconfig.xtensa"
+source "modules/Kconfig.mcuboot_bootutil"
