--- a/west.yml
+++ b/west.yml
@@ -93,8 +93,9 @@ manifest:
       revision: 13cf2e52024a144ecee9f37680681760a85febab
       path: modules/crypto/mbedtls
     - name: mcuboot
-      revision: c71d2186077f9fd5f6d1aa53ee3f09dc41ce78f6
+      revision: pull/892/head
       path: bootloader/mcuboot
+      url: https://github.com/mcu-tools/mcuboot
     - name: mcumgr
       revision: 697e145d5ee5e4b400e9d7bceaec79f6ac29df7c
       path: modules/lib/mcumgr
