--- a/subsys/dfu/boot/CMakeLists.txt
+++ b/subsys/dfu/boot/CMakeLists.txt
@@ -3,7 +3,6 @@
 if(CONFIG_MCUBOOT_IMG_MANAGER)
 zephyr_library()
 zephyr_library_sources(mcuboot.c)
+zephyr_library_sources_ifdef(CONFIG_MCUBOOT_SHELL mcuboot_shell.c)
 zephyr_library_link_libraries(MCUBOOT_BOOTUTIL)
 endif()
-
-zephyr_sources_ifdef(CONFIG_MCUBOOT_SHELL mcuboot_shell.c)
